--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=80
 spring.datasource.url=jdbc:postgresql://localhost:5432/edu_center_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=0123
+spring.datasource.password=ahrorbek0123#
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=never
 spring.jpa.show-sql=true
