--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=ahrorbek0123#
 #spring.datasource.password=0123
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=never
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
