--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ server.port=80
 spring.datasource.url=jdbc:postgresql://localhost:5432/edu_center_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-#spring.datasource.password=ahrorbek0123#
-spring.datasource.password=0123
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.initialization-mode=never
+spring.datasource.password=ahrorbek0123#
+#spring.datasource.password=0123
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
