--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots-spring-boot-starter</artifactId>
+            <version>5.7.1</version>
+        </dependency>
     </dependencies>
 
     <build>
